--- a/test_settings.toml
+++ b/test_settings.toml
@@ -3,6 +3,7 @@ id = ""
 token = ""
 
 [request]
-coordinates = [ 42.65614, 59.58242, 42.73579, 59.52529 ]
-from = "2017.12.01"
-to = "2023.02.28"
+coordinates = [ 55.80916, 40.96295, 55.78702, 40.99437 ]
+time = [ "2024.01.21", "2024.01.21" ]
+detector = "net"
+size = [ 300, 200 ]
