Trying to publish to pypi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,6 @@
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [tool.black]
 exclude = "(.git/)|(.vscode/)|(.idea/)|(__pycache__/)|(.eolearn_cache/)|(.ipynb_checkpoints/)|(venv/)"
